--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,69 @@
-p {
-    color: red;
+h1, h2, .raudonas {
+    text-align: center;
+}
+
+.raudonas {
+    border: 1px solid red;
+}
+
+.google_div {
+    border: 1px solid blue;
+    width: 800px;
+    margin: 0 auto;
+}
+
+.h2_margin {
+    margin-top: 100px;
+}
+
+.left, .center, .right {
+    border: 1px solid black;
+}
+
+.center {
+    text-align: center;
+}
+
+.right {
+    text-align: right;
+}
+
+.box_model {
+    background-color: red;
+    padding: 20px;
+}
+
+.melynas {
+    background-color: blue;
+    padding: 20px;
+}
+
+.div_hello, .div_bye {
+    background-color: green;
+    padding: 20px;
+    margin: 10px;
+}
+
+.google_icon {
+    width: 13%;
+    border: 1px solid black;
+    margin-left: 80px;
+}
+
+a {
+    border: 1px solid black;
+    padding: 0 70px;
+    margin: 0 80px;
+
+}
+
+.red {
+    background-color: red;
+    width: 150px;
+    height: 150px;
+    margin-top: 10px;
+}
+
+.red:last-child {
+    margin-bottom: 100px;
 }
